# mlops-churn-demo

./: .dockerignore  .gitignore  LICENSE  Makefile  PLAN.md  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml  retrain.yml  security.yml
data/: .gitignore  raw.csv.dvc
docs/: architecture.md  data_card.md  model_card.md
experiments/: config.py  promote.py  run.py  tune_optuna.py
infra/: .gitignore  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/modules/ml_environment/: main.tf  outputs.tf  variables.tf
monitoring/: docker-compose.yml  drift_check.py  prometheus.yml
monitoring/grafana/dashboards/: churn_monitoring.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
pipelines/: etl_flow.py  schema.py
scripts/: build_site.py  gate.py  make_corrupted.py  make_data.py  make_drifted.py  seed_vault.py
security/: docker-compose.yml
serving/: Dockerfile  app.py  load_test.py  requirements.txt  vault.py
src/churnml/: __init__.py  data.py  evaluate.py  features.py  model.py  prepare.py  train.py
tests/: conftest.py  test_features.py  test_gate.py  test_model.py  test_smoke.py
